--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@
              
             </ul>
         </nav>
+        <section id="bannar">
+          <div class="bannar-content">
+            <h2>Hi, I  am</h2>
+            <h1>Mary Hardy</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <div>
+            <button class="btn"> download cv</button>
+            <button class="btn"> contact</button>
+            </div>
+
+            </div>
+
+          </div>
+          <div class="bnnar-image">
+            <img src="images/hardy.png">
+
+          </div>
+
+
+        </section>
     </header>
 </body>
 </html>
